src/test/resources/invalid/defaultConstructor/NeedSuperCall.vas
class Main is
    this(a: Integer) is
    end
end

class A extends Main is
    this(a: Integer) is
    end
end